Firebase 설정정보 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,3 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
+
