--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
+
+    compile 'com.google.android.gms:play-services-auth:10.0.0'
+    compile 'com.google.firebase:firebase-auth:10.0.0'
+
     testCompile 'junit:junit:4.12'
 }
 
