--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.0.0'
     compile 'com.google.firebase:firebase-auth:10.0.0'
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     testCompile 'junit:junit:4.12'
 }
