--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
+    compile 'com.google.firebase:firebase-messaging:10.0.0'
+
     testCompile 'junit:junit:4.12'
 }
 
