tastytoast 라이브러리를 통해 푸쉬 Toast 스타일 개선

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
     compile 'com.google.firebase:firebase-messaging:10.0.0'
+    compile 'com.sdsmdg.tastytoast:tastytoast:0.1.0'
 
     testCompile 'junit:junit:4.12'
 }
