--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.sdsmdg.tastytoast:tastytoast:0.1.0'
 
     compile 'com.google.firebase:firebase-database:10.0.0'
+    compile 'com.firebaseui:firebase-ui-database:1.0.1'
 
     testCompile 'junit:junit:4.12'
 }
